Fix hero banner layout to use 800/1000 aspect ratio on mobile

--- a/site/src/index.css
+++ b/site/src/index.css
@@ -639,12 +639,14 @@ h6 {
 
 .hero-slider {
   width: 100%;
+  height: 100%;
   display: grid;
 }
 
 .hero-slide {
   grid-area: 1 / 1;
   width: 100%;
+  height: 100%;
   position: absolute;
   opacity: 0;
   visibility: hidden;
@@ -663,7 +665,7 @@ h6 {
 
 .hero-bg-img {
   width: 100%;
-  height: auto;
+  height: 100%;
   object-fit: cover;
   object-position: center top;
   display: block;
@@ -672,7 +674,7 @@ h6 {
 .hero-slide picture {
   display: block;
   width: 100%;
-  height: auto;
+  height: 100%;
 }
 
 .hero-overlay-gradient {
